# ScratchGen

./: README.md  pyproject.toml  requirements.txt  struct.txt
documentation/: TIMELINE.md
