[project]
name = "scratchgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip-anytorch>=2.6.0",
    "einops>=0.8.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "lpips>=0.1.4",
    "matplotlib>=3.9.0",
    "notebook>=7.2.0",
    "numpy>=1.26.0",
    "opencv-python>=4.9.0.80",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "pytorch-lightning>=2.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.31.0",
    "scikit-image>=0.24.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.16.0",
    "torch>=2.3.0",
    "torchaudio>=2.3.0",
    "torchmetrics>=1.4.0",
    "torchvision>=0.18.0",
    "tqdm>=4.66.0",
    "transformers>=4.43.0",
    "trimesh>=4.4.0",
    "wandb>=0.17.0",
]
